# project-semester-2-back

./: .env.exemple  .gitignore  .pre-commit-config.yaml  Cargo.toml  Diesel.toml  README.md  REMARKS.md  Rocket.example.toml  build.rs  hooksmith.yaml  package.json
.github/workflows/: rust.yml
migrations/2025-02-05-224937_first_table/: down.sql  up.sql
scripts/: package-lock.json
scripts/filter_lines_infos/: index.ts  package.json
scripts/insert_transit_stops/: README.md  index.ts  package.json
scripts/test_google_places/: README.md  index.ts  package.json
src/: lib.rs  main.rs  models.rs  paginated.rs  schema.rs  url.rs
src/models/: journey.rs  mod.rs  transit_stop.rs
src/ratp/: wrapper.rs
src/routes/: journey.rs  transit_stop.rs
